--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@
 .navbar-logo {
   margin-right: auto;
   margin-left: 15px;
+  padding-top: 4px;
 }
 
 .navbar-items {
@@ -42,5 +43,14 @@
 
 .navbar-items-right {
   margin-right: 15px;
+}
+
+.owl-carousel {
+  width: 100vw;
+  height: 25vh;
+}
+
+.owl-carousel img {
+  height: 50vh;
 }
 /*# sourceMappingURL=main.css.map */
