--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  color: white;
 }
 
 .navbar {
@@ -21,7 +22,10 @@ body {
   margin-right: auto;
   margin-left: 15px;
   padding-top: 4px;
-  color: white;
+}
+
+.navbar-item {
+  text-decoration: none;
 }
 
 .navbar-items {
@@ -40,5 +44,48 @@ body {
   margin: 1em auto 0 auto;
   padding: 0;
   width: 75%;
+  max-width: 1300px;
+}
+
+.content-container {
+  margin: auto;
+  width: 75vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 3em;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #191919;
+  max-width: 1200px;
+}
+
+.content-label {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 1rem;
+  text-align: center;
+  height: 50%;
+  line-height: 5rem;
+}
+
+.content-title {
+  font-size: 3rem;
+  font-family: "Arapey", serif;
+}
+
+.content-subtitle {
+  font-family: "Montserrat", sans-serif;
+}
+
+.content-image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 /*# sourceMappingURL=main.css.map */
