Added second section

--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ body {
   padding: 1rem;
   text-align: center;
   height: 50%;
-  line-height: 5rem;
+  line-height: 3rem;
 }
 
 .content-title {
@@ -83,9 +83,23 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.contact-button {
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  padding: 15px;
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+}
+
 .content-image {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.content-image img {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 /*# sourceMappingURL=main.css.map */
