--- a/main.css
+++ b/main.css
@@ -117,4 +117,16 @@ body {
 .link:hover {
   color: pink;
 }
+
+@media (max-width: 991.98px) {
+  .content-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  img {
+    max-width: 100%;
+  }
+}
 /*# sourceMappingURL=main.css.map */
