Added more responsive tweaks

--- a/main.scss
+++ b/main.scss
@@ -111,4 +111,21 @@ body {
   img {
     max-width: 100%;
   }
+
+  .contact-button {
+    margin-bottom: 1rem;
+  }
+
+  .content-title {
+    font-size: 2rem;
+    font-family: "Arapey", serif;
+    margin-bottom: 5px;
+    line-height: 1rem;
+  }
+
+  .content-subtitle {
+    font-family: "Montserrat", sans-serif;
+    font-size: 0.8rem;
+    line-height: 1rem;
+  }
 }
